<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".PasswordKeeperActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/password_account_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/titleBar"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/textTitle"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_account_tool_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background"
        >

        <EditText
            android:id="@+id/et_user_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/placeholderUserKey"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:singleLine="true"
            android:inputType="textPassword"
            android:maxLength="8"/>

        <EditText
            android:id="@+id/et_confirm_user_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/placeholderConfirmUserKey"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:singleLine="true"
            android:inputType="textPassword"
            android:maxLength="8"/>

        <CheckBox
            android:id="@+id/cb_show_user_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Show User Key" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:text=""
            android:visibility="gone"
            android:id="@+id/tv_error"
            android:layout_gravity="center_horizontal" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:background="@color/button"
            android:text="Login"
            android:id="@+id/btn_login" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/information"
            android:textStyle="italic"
            android:text="@string/userKeyInformation"
            android:id="@+id/tv_info"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>


</RelativeLayout>