<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.coronate.passwordkeeper.passwordaccount.PasswordAccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/password_account_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/titleBar"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/textTitle"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/password_account_tool_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background">

        <EditText
                android:id="@+id/et_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint ="@string/placeholderAccountName"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:singleLine="true"
                android:inputType="text" />


        <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/placeholderUsername"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:singleLine="true"
                android:inputType="text" />

        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/placeholderPassword"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:singleLine="true"
                android:inputType="textPassword" />

        <EditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/placeholderNotes"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:singleLine="true"
                android:inputType="text" />

        <CheckBox
                android:id="@+id/cb_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Show Password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:text=""
            android:visibility="gone"
            android:id="@+id/tv_error"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/button"
            android:text="Save Account"
            android:id="@+id/btn_save_account" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/button"
            android:text="Edit Account"
            android:id="@+id/btn_edit_account" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/button"
            android:text="Delete Account"
            android:id="@+id/btn_delete_account" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/button"
            android:text="Update Account"
            android:id="@+id/btn_update_account" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/button"
            android:text="Cancel"
            android:id="@+id/btn_cancel" />

    </LinearLayout>

</RelativeLayout>
